tests/machine/x/cpp/left_join.error
line 15: ../../../tests/machine/x/cpp/left_join.cpp:15:12: error: ‘c’ was not declared in this scope
   15 |   decltype(c) customer;
      |            ^
../../../tests/machine/x/cpp/left_join.cpp:15:12: error: ‘c’ was not declared in this scope
../../../tests/machine/x/cpp/left_join.cpp: In lambda function:
../../../tests/machine/x/cpp/left_join.cpp:33:45: error: cannot convert ‘__struct1’ to ‘int’ in initialization
   33 |           __items.push_back(__struct3{o.id, c, o.total});
      |                                             ^
      |                                             |
      |                                             __struct1
../../../tests/machine/x/cpp/left_join.cpp:37:45: error: cannot convert ‘__struct1’ to ‘int’ in initialization
   37 |           __items.push_back(__struct3{o.id, c, o.total});
      |                                             ^
      |                                             |
      |                                             __struct1

 14 |   decltype(std::declval<__struct2>().id) orderId;
 15 |   decltype(c) customer;
 16 |   decltype(std::declval<__struct2>().total) total;
